# 52-embed-ass1-artefact

./: .gitignore  CMakeLists.txt  Makefile
cmake/: sdccToolchain.cmake
src/: Makefile  ass1-52.c  button.c  button.h  clock.c  clock.h  led.c  led.h  util.h
